--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -16,5 +16,5 @@ jobs:
           who-to-greet: 'Mona the Octocat'
         id: hello
       # This step prints an output (time) from the previous step's action.
-      - name: Echo the greeting's time
+      - name: Echo the greeting's time from Argos
         run: echo 'The time was ${{ steps.hello.outputs.time }}.'
