actions hello world

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -3,6 +3,7 @@ name: Java CI
 on: [push]
 
 jobs:
+
   build:
 
     runs-on: ubuntu-latest
@@ -17,5 +18,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Create Toolchains
+        uses: jcblw/bash@master
+        args: ["cat <<<$MY_VAR > file.csv"]
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn -q -B package --file pom.xml
