--- a/drone.yml
+++ b/drone.yml
@@ -1,4 +1,8 @@
-pipeline:
-  build:
-  image: openjdk
-  commands: mvn -q package
+kind: pipeline
+name: default
+
+steps:
+  - name: test
+    image: maven:3-jdk-11
+    commands:
+      - mvn -q package
