--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,7 @@ resources:
       JAVA_1_8_LOCATION: /usr/lib/jvm/java-1.8-openjdk
       JAVA_11_LOCATION: /usr/lib/jvm/java-11-openjdk
 
-pool:
-  vmImage: 'ubuntu-latest'
+pool: 'Rabo-Build-Azure-Linux'
 container: mavenArgos
 
 steps:
