--- a/drone.yml
+++ b/drone.yml
@@ -23,6 +23,7 @@ steps:
   - name: argos-jenkins
     image: registry:5000/rabobanknl/argos-jenkins:latest
     pull: always
+    insecure: true
     commands:
       - echo hallo
     environment:
