--- a/drone.yml
+++ b/drone.yml
@@ -27,13 +27,6 @@ steps:
       - ping registry
     depends_on:
      - registry
-  - name: regression test
-    image: rabobanknl/argos-build:latest
-    commands:
-      - ping argos-jenkins
-      - sleep 300
-    depends_on:
-     - build argos service image
  
   - name: argos-jenkins
     image: registry:5000/rabobanknl/argos-jenkins:latest
@@ -46,13 +39,13 @@ steps:
     depends_on:
      - build argos service image
      - registry
-  - name: regression test
-    image: rabobanknl/argos-build:latest
-    commands:
-      - ping argos-jenkins
-      - sleep 300
-    depends_on:
-     - build argos service image
+#   - name: regression test
+#     image: rabobanknl/argos-build:latest
+#     commands:
+#       - ping argos-jenkins
+#       - sleep 300
+#     depends_on:
+#      - build argos service image
      
 image_pull_secrets:
    - dockerconfig
