--- a/drone.yml
+++ b/drone.yml
@@ -6,25 +6,23 @@ type: docker
 services:
   - name: registry
     image: registry
-    ports:
-      - "443:5000"
 
 steps:
 # build docker images
   - name: build argos service image
     image: plugins/docker
     settings:
-      repo: registry/rabobanknl/argos-jenkins
+      repo: registry:5000/rabobanknl/argos-jenkins
       tags: latest
       context: docker
       dockerfile: docker/JenkinsDockerfile
-      registry: registry
+      registry: registry:5000
       insecure: true
     depends_on:
      - registry
  
   - name: argos-jenkins
-    image: registry/rabobanknl/argos-jenkins:latest
+    image: registry:5000/rabobanknl/argos-jenkins:latest
     commands:
       - echo hallo
     insecure: true
@@ -39,8 +37,8 @@ steps:
 #     depends_on:
 #      - build argos service image
      
-#image_pull_secrets:
-#   - dockerconfig
+# image_pull_secrets:
+#    - dockerconfig
 
 trigger:
   event:
